Testimonial image fixed bug sometimes not showing

--- a/src/components/textSlider/TextSlider.module.sass
+++ b/src/components/textSlider/TextSlider.module.sass
@@ -11,6 +11,9 @@
 .logo
     display: inline-block
     margin-bottom: 56px
+    min-width: 200px
+    img
+        margin: auto
 
 .title
     margin-bottom: 40px
